--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #header {
   display: flex;
   align-items: center;
-  height: 7vw;
+  height: 10vw;
   width: 100%;
   background-color: black;
 }
@@ -28,7 +28,6 @@
   height: 100%;
   width: 75%;
   margin: auto;
-  padding-bottom: 7vw;
 }
 
 #searchbar {
@@ -36,30 +35,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 2vw;
+  height: 4vw;
   padding: 1vw;
 }
 
-#accessible-txt {
+#nav-txt {
   text-align: center;
   color: white;
   padding: 1vw;
   font-size: 2vw;
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  font-weight: bold;
+  font-weight: normal;
   font-style: normal;
+  text-decoration: none;
 }
 
-#weather-txt {
-  text-align: center;
-  color: white;
-  padding: 1vw;
-  font-size: 2vw;
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: bold;
-  font-style: normal;
+#nav-txt:hover {
+  color: black;
 }
 
 #pac-input {
@@ -78,11 +71,17 @@
   height: auto;
 }
 
+embed {
+  margin: 0;
+  padding: 0;
+}
+
 #footer {
   bottom: 0;
+  left: 0;
   display: flex;
   align-items: center;
-  height: 4vw;
+  height: 5vw;
   width: 100%;
   background-color: black;
 }
@@ -96,7 +95,7 @@
   font-optical-sizing: auto;
   font-weight: bold;
   font-style: normal;
-  padding: 1vw;
+  padding: 0.75vw;
   background-color: rgb(253, 181, 21);
   cursor: pointer;
   border: none;
@@ -105,6 +104,18 @@
 
 #footer-button:hover {
   background-color: rgb(166, 122, 5);
+}
+
+#secondary-container {
+  background-color: black;
+  height: 100%;
+}
+
+#secondary-img {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 html, body {
