--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@
 }
 
 #map {
-  height: 100%;
-  width: 75%;
+  height: 95%;
+  width: 90%;
   margin: auto;
 }
 
@@ -96,6 +96,7 @@
   border-color: transparent;
   padding: 0.5vw;
   font-size: 1.5vw;
+  background-color: rgb(240, 240, 240);
 }
 
 #commons-marker-icon {
@@ -113,7 +114,7 @@ embed {
   left: 0;
   display: flex;
   align-items: center;
-  height: 5vw;
+  height: 3vw;
   width: 100%;
   background-color: black;
 }
