--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #header {
   display: flex;
   align-items: center;
-  height: 10vw;
+  height: 8vw;
   width: 100%;
   background-color: black;
 }
@@ -12,7 +12,7 @@
   transform: translateX(-50%);
   text-align: center;
   color: rgb(253, 181, 21);
-  font-size: 5vw;
+  font-size: 4vw;
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight: bold;
@@ -24,35 +24,53 @@
   height: 4vw;
 }
 
+#mainpage {
+  background-color: white;
+  width: 100%;
+  height: 100%;
+}
+
 #map {
   height: 100%;
-  width: 75%;
+  width: 80%;
+  float: right;
   margin: auto;
 }
 
-#searchbar {
-  width: 40vw;
-  height: 7vw;
-  display: grid;
-  grid-template-columns: auto;
-  align-items: center;
-  column-gap: 5px;
+#sidebar {
+  width: 20%;
+  height: 100%;
+  float: left;
   background-color: white;
-  border: 2px solid grey;
-  border-radius: 25px;
-  padding: 5px;
+  overflow-y: auto;
 }
 
-#searchbar2 {
+#searchbar {
+  height: 15%;
+  background-color: white;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
   display: grid;
-  grid-template-columns: auto auto auto;
-  align-items: center;
+  font-family: "Inter", sans-serif;
+  font-weight: bold;
+  font-style: normal;
+  text-align: left;
+}
+
+#buttons {
+  width: 100%;
+  background-color: white;
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: left;
 }
 
 #search-button {
   margin-right: 15px;
   border-radius: 10px;
   height: 2vw;
+  width: 7vw;
   color: black;
   font-size: 0.75vw;
   font-family: "Inter", sans-serif;
@@ -67,51 +85,61 @@
   background-color: rgb(166, 122, 5);
 }
 
+#directions {
+  padding-left: 10px;
+  font-family: "Inter", sans-serif;
+  font-weight: normal;
+  font-style: normal;
+}
+
 #navbar {
-  background-color: rgb(99, 100, 102);
+  /* rgb(99, 100, 102) */
+  background-color: rgb(253, 181, 21);
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 4vw;
+  height: 2vw;
   padding: 1vw;
 }
 
 #nav-txt {
   text-align: center;
-  color: white;
+  color: black;
   padding: 1vw;
-  font-size: 2vw;
+  font-size: 1.5vw;
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  font-weight: normal;
+  font-weight: bold;
   font-style: normal;
   text-decoration: none;
 }
 
 #nav-txt:hover {
-  color: black;
+  color: white;
 }
 
 #pac-input {
-  width: 25vw;
-  height: 2vw;
+  width: 90%;
+  height: 1vw;
   text-align: left;
   text-indent: 1em;
   border-radius: 25px;
   border-color: transparent;
   padding: 0.5vw;
-  font-size: 1.5vw;
+  font-size: 1vw;
+  border: 2px solid black;
 }
 
 #origin-input {
-  width: 25vw;
-  height: 2vw;
+  width: 90%;
+  height: 1vw;
   text-align: left;
   text-indent: 1em;
   border-radius: 25px;
   border-color: transparent;
   padding: 0.5vw;
-  font-size: 1.5vw;
+  font-size: 1vw;
+  border: 2px solid black;
 }
 
 #commons-marker-icon {
@@ -128,29 +156,41 @@ embed {
   bottom: 0;
   left: 0;
   display: flex;
+  justify-content: center;
   align-items: center;
   height: 5vw;
   width: 100%;
   background-color: black;
+  text-align: center;
+  color: white;
+  font-size: 1vw;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: light;
+  font-style: normal;
+  text-decoration: none;
 }
 
-#footer-button {
-  margin-left: 2vw;
-  text-align: left;
-  color: black;
+#feedback-button {
+  position: fixed;
+  top: 40%;
+  right: 20px;
+  transform: rotate(270deg);
+  transform-origin: right center;
+  border: none;
+  cursor: pointer;
+  border: top;
+  border-radius: 0.5vw 0.5vw 0 0;
   font-size: 1vw;
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight: bold;
   font-style: normal;
-  padding: 0.75vw;
+  padding: 1vw;
   background-color: rgb(253, 181, 21);
-  cursor: pointer;
-  border: none;
-  border-radius: 0.5vw;
 }
 
-#footer-button:hover {
+#feedback-button:hover {
   background-color: rgb(166, 122, 5);
 }
 
