--- a/style.css
+++ b/style.css
@@ -81,11 +81,33 @@
   cursor: pointer;
 }
 
+#clear-button {
+  margin-right: 15px;
+  border-radius: 10px;
+  height: 2vw;
+  width: 7vw;
+  color: black;
+  font-size: 0.75vw;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
+  background-color: rgb(253, 181, 21);
+  cursor: pointer;
+}
+
 #search-button:hover {
   background-color: rgb(166, 122, 5);
 }
 
 #directions {
+  padding-left: 10px;
+  font-family: "Inter", sans-serif;
+  font-weight: normal;
+  font-style: normal;
+}
+
+#directions-region {
   padding-left: 10px;
   font-family: "Inter", sans-serif;
   font-weight: normal;
@@ -102,7 +124,19 @@
   padding: 1vw;
 }
 
-#nav-txt {
+#weather-txt {
+  text-align: center;
+  color: black;
+  padding: 1vw;
+  font-size: 1.5vw;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
+  text-decoration: none;
+}
+
+#accessible-txt {
   text-align: center;
   color: black;
   padding: 1vw;
@@ -124,7 +158,6 @@
   text-align: left;
   text-indent: 1em;
   border-radius: 25px;
-  border-color: transparent;
   padding: 0.5vw;
   font-size: 1vw;
   border: 2px solid black;
@@ -136,7 +169,6 @@
   text-align: left;
   text-indent: 1em;
   border-radius: 25px;
-  border-color: transparent;
   padding: 0.5vw;
   font-size: 1vw;
   border: 2px solid black;
@@ -166,7 +198,7 @@ embed {
   font-size: 1vw;
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  font-weight: light;
+  font-weight: lighter;
   font-style: normal;
   text-decoration: none;
 }
@@ -179,7 +211,6 @@ embed {
   transform-origin: right center;
   border: none;
   cursor: pointer;
-  border: top;
   border-radius: 0.5vw 0.5vw 0 0;
   font-size: 1vw;
   font-family: "Inter", sans-serif;
