--- a/style.css
+++ b/style.css
@@ -66,22 +66,7 @@
   justify-content: left;
 }
 
-#search-button {
-  margin-right: 15px;
-  border-radius: 10px;
-  height: 2vw;
-  width: 7vw;
-  color: black;
-  font-size: 0.75vw;
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: bold;
-  font-style: normal;
-  background-color: rgb(253, 181, 21);
-  cursor: pointer;
-}
-
-#clear-button {
+#search-button, #clear-button {
   margin-right: 15px;
   border-radius: 10px;
   height: 2vw;
@@ -117,7 +102,7 @@
   padding: 1vw;
 }
 
-#nav-txt {
+#accessible-txt, #weather-txt {
   text-align: center;
   color: black;
   padding: 1vw;
@@ -133,25 +118,12 @@
   color: white;
 }
 
-#origin-input {
+#origin-input, #dest-input {
   width: 90%;
   height: 1vw;
   text-align: left;
   text-indent: 1em;
   border-radius: 25px;
-  border-color: transparent;
-  padding: 0.5vw;
-  font-size: 1vw;
-  border: 2px solid black;
-}
-
-#dest-input {
-  width: 90%;
-  height: 1vw;
-  text-align: left;
-  text-indent: 1em;
-  border-radius: 25px;
-  border-color: transparent;
   padding: 0.5vw;
   font-size: 1vw;
   border: 2px solid black;
@@ -181,7 +153,7 @@ embed {
   font-size: 1vw;
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  font-weight: light;
+  font-weight: lighter;
   font-style: normal;
   text-decoration: none;
 }
@@ -194,7 +166,6 @@ embed {
   transform-origin: right center;
   border: none;
   cursor: pointer;
-  border: top;
   border-radius: 0.5vw 0.5vw 0 0;
   font-size: 1vw;
   font-family: "Inter", sans-serif;
