--- a/style.css
+++ b/style.css
@@ -58,6 +58,12 @@
   text-align: left;
 }
 
+@media screen and (orientation: portrait){
+  #searchbar{
+    height: 5%;
+  }
+}
+
 #buttons {
   width: 100%;
   background-color: white;
@@ -66,7 +72,7 @@
   justify-content: left;
 }
 
-#search-button {
+#search-button, #clear-button {
   margin-right: 15px;
   border-radius: 10px;
   height: 2vw;
@@ -102,7 +108,7 @@
   padding: 1vw;
 }
 
-#nav-txt {
+#index-txt, #accessible-txt, #weather-txt {
   text-align: center;
   color: black;
   padding: 1vw;
@@ -118,25 +124,12 @@
   color: white;
 }
 
-#pac-input {
+#origin-input, #dest-input {
   width: 90%;
   height: 1vw;
   text-align: left;
   text-indent: 1em;
   border-radius: 25px;
-  border-color: transparent;
-  padding: 0.5vw;
-  font-size: 1vw;
-  border: 2px solid black;
-}
-
-#origin-input {
-  width: 90%;
-  height: 1vw;
-  text-align: left;
-  text-indent: 1em;
-  border-radius: 25px;
-  border-color: transparent;
   padding: 0.5vw;
   font-size: 1vw;
   border: 2px solid black;
@@ -166,7 +159,7 @@ embed {
   font-size: 1vw;
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  font-weight: light;
+  font-weight: lighter;
   font-style: normal;
   text-decoration: none;
 }
@@ -179,7 +172,6 @@ embed {
   transform-origin: right center;
   border: none;
   cursor: pointer;
-  border: top;
   border-radius: 0.5vw 0.5vw 0 0;
   font-size: 1vw;
   font-family: "Inter", sans-serif;
@@ -209,4 +201,17 @@ embed {
 html, body {
   height: 100%;
   margin: 0;
+}
+
+.gm-style-iw-chr {
+  width: 20%;
+  height: 60%;
+  top: 0;
+  right: 0;
+  position: absolute;
+  display: flex;
+}
+
+.gm-style-iw.gm-style-iw-c {
+  padding-top: 1vw !important;
 }
