--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
 }
 
 #searchbar {
-  height: 15%;
+  height: auto;
   background-color: white;
   padding-top: 10px;
   padding-left: 10px;
@@ -64,6 +64,7 @@
   display: grid;
   grid-template-columns: auto auto;
   justify-content: left;
+  margin-top: 5px;
 }
 
 #search-button {
@@ -85,6 +86,71 @@
   background-color: rgb(166, 122, 5);
 }
 
+#clear-button {
+  border-radius: 10px;
+  height: 2vw;
+  width: 7vw;
+  color: black;
+  font-size: 0.75vw;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
+  background-color: lightgray;
+  cursor: pointer;
+}
+
+#clear-button:hover {
+  background-color: gray;
+  color: white;
+}
+
+#favorite-button {
+  margin-top: 8px;
+  width: 90%;
+  height: 2vw;
+  border-radius: 10px;
+  border: none;
+  font-size: 0.75vw;
+  background-color: #ffda7c;
+  color: black;
+  font-family: "Inter", sans-serif;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#favorite-button:hover {
+  background-color: #e6b800;
+  color: white;
+}
+
+#favorites-section {
+  margin-top: 10px;
+  font-family: "Inter", sans-serif;
+  font-weight: normal;
+  font-size: 0.9vw;
+  max-height: 15vw;
+  overflow-y: auto;
+}
+
+#favorites-list {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+#favorites-list li {
+  padding: 6px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  font-size: 0.85vw;
+  font-weight: 500;
+}
+
+#favorites-list li:hover {
+  background-color: #f1f1f1;
+}
+
 #directions {
   padding-left: 10px;
   font-family: "Inter", sans-serif;
@@ -93,7 +159,6 @@
 }
 
 #navbar {
-  /* rgb(99, 100, 102) */
   background-color: rgb(253, 181, 21);
   display: flex;
   justify-content: center;
@@ -118,19 +183,9 @@
   color: white;
 }
 
-#pac-input {
-  width: 90%;
-  height: 1vw;
-  text-align: left;
-  text-indent: 1em;
-  border-radius: 25px;
-  border-color: transparent;
-  padding: 0.5vw;
-  font-size: 1vw;
-  border: 2px solid black;
-}
-
-#origin-input {
+#pac-input,
+#origin-input,
+#dest-input {
   width: 90%;
   height: 1vw;
   text-align: left;
