--- a/style.css
+++ b/style.css
@@ -92,6 +92,13 @@
   font-weight: bold;
   font-style: normal;
   text-align: left;
+  grid-row-gap: 0.5vw;
+}
+
+#search-favorite {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-row-gap: 0.25vw;
 }
 
 @media screen and (orientation: portrait){
@@ -104,26 +111,19 @@
   width: 100%;
   background-color: white;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto;
   justify-content: left;
 }
 
-#favorite-button {
-  margin-top: 1vw;
-  padding: 0.5vw 1vw;
+#favorite-button-1, #favorite-button-2 {
   border: none;
-  border-radius: 0.75vw;
-  background-color: rgb(255, 99, 132); /* A nice red-pink tone */
-  color: white;
-  font-size: 0.9vw;
-  font-family: "Inter", sans-serif;
-  font-weight: bold;
-  cursor: pointer;
-  width: 90%;
+  width: 2vw;
+  background-color: transparent;
 }
 
-#favorite-button:hover {
-  background-color: rgb(200, 70, 100);
+#favorite-button-1:hover, #favorite-button-2:hover {
+  cursor: pointer;
+  transform: scale(1.2);
 }
 
 #favorites-container {
@@ -150,11 +150,11 @@
   text-decoration: underline;
 }
 
-#search-button, #clear-button {
-  margin-right: 0.75vw;
+#search-button, #clear-button, #view-fave-button {
+  margin-right: 0.5vw;
   border-radius: 0.75vw;
   height: 2vw;
-  width: 7vw;
+  width: 5vw;
   color: black;
   font-size: 0.75vw;
   font-family: "Inter", sans-serif;
@@ -165,8 +165,27 @@
   cursor: pointer;
 }
 
-#search-button:hover {
+#search-button:hover, #clear-button:hover, #view-fave-button:hover {
   background-color: rgb(166, 122, 5);
+}
+
+#fave-bullet {
+  display: grid;
+  grid-template-columns: auto auto;
+  align-items: center;
+}
+
+.delete-fave {
+  width: 2vw;
+  border: 0.05vw solid grey;
+  border-radius: 1vw;
+  margin-left: 1vw;
+}
+
+.delete-fave:hover {
+  cursor: pointer;
+  background-color: darkgrey;
+  border-color: black;
 }
 
 #directions {
@@ -204,7 +223,7 @@
 }
 
 #origin-input, #dest-input {
-  width: 90%;
+  width: 15vw;
   height: 1vw;
   text-align: left;
   text-indent: 1em;
