--- a/style.css
+++ b/style.css
@@ -125,8 +125,9 @@
   width: 100%;
   background-color: white;
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto;
   justify-content: left;
+  row-gap: 0.25vw;
 }
 
 #favorite-button-1, #favorite-button-2 {
@@ -140,7 +141,6 @@
   transform: scale(1.2);
 }
 
-
 #favorites-container {
   margin-top: 1vw;
   padding-left: 1vw;
@@ -148,31 +148,57 @@
   font-size: 0.9vw;
 }
 
-
 #favorites-list {
   list-style-type: "⭐ ";
   padding-left: 1.5vw;
   margin: 0.5vw 0;
 }
 
+#favorites-list p {
+  margin: 0 0 0 0;
+}
 
-#favorites-list li {
+#favorites-list li > div {
+  margin-bottom: 0.5vw;
+  cursor: pointer;
+  color: rgb(50, 50, 50);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#favorites-list li > div:hover {
+  color: rgb(253, 181, 21);
+}
+
+#recent-container {
+  margin-top: 1vw;
+  padding-left: 1vw;
+  font-family: "Inter", sans-serif;
+  font-size: 0.9vw;
+}
+
+#recent-list{
+  list-style-type: "⭐ ";
+  padding-left: 1.5vw;
+  margin: 0.5vw 0;
+}
+
+#recent-list li {
   margin-bottom: 0.5vw;
   cursor: pointer;
   color: rgb(50, 50, 50);
 }
 
-
-#favorites-list li:hover {
+#recent-list li:hover {
   color: rgb(253, 181, 21);
-  text-decoration: underline;
 }
 
-#search-button, #clear-button, #view-fave-button {
+#search-button, #clear-button, #view-fave-button, #recent-button {
   margin-right: 0.5vw;
   border-radius: 0.75vw;
   height: 2vw;
-  width: 5vw;
+  width: 7vw;
   color: black;
   font-size: 0.75vw;
   font-family: "Inter", sans-serif;
@@ -183,7 +209,7 @@
   cursor: pointer;
 }
 
-#search-button:hover, #clear-button:hover, #view-fave-button:hover {
+#search-button:hover, #clear-button:hover, #view-fave-button:hover, #recent-button:hover {
   background-color: rgb(166, 122, 5);
 }
 
@@ -346,6 +372,7 @@ html, body {
   padding-top: 1vw !important;
 }
 
+/*
 #recent-list li {
   font-family: "Inter", sans-serif;
   font-size: 0.8vw;
@@ -363,3 +390,4 @@ html, body {
   padding: 2px 6px;
   cursor: pointer;
 }
+*/
